<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:text="@string/bt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:layout_gravity="center"
        android:text="@string/bt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:layout_gravity="right"
        android:text="@string/bt3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:layout_gravity="right"
        android:text="@string/bt4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:layout_gravity="center"
        android:text="@string/bt5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:layout_gravity="left"
        android:text="@string/bt6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:text="@string/bt7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:layout_gravity="center"
        android:text="@string/bt8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:layout_gravity="right"
        android:text="@string/bt9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>


