<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/rl1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:text="@string/bt2"
            android:layout_above="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:text="@string/bt1"
            android:id="@+id/btn1"
            android:layout_alignParentBottom="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </RelativeLayout>
    <Button
        android:text="@string/bt5"
        android:layout_toRightOf="@+id/rl1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <RelativeLayout
        android:layout_alignParentRight="true"
        android:id="@+id/rl2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:text="@string/bt4"
            android:layout_above="@+id/btn3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:text="@string/bt3"
            android:id="@+id/btn3"
            android:layout_alignParentBottom="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>
    <Button
        android:text="@string/bt6"
        android:layout_toLeftOf="@+id/rl2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>