<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1">
    <Button
        android:layout_weight="0.25"
        android:text="@string/bt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:layout_weight="0.25"
        android:text="@string/bt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:layout_weight="0.25"
        android:text="@string/bt3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:layout_weight="0.25"
        android:text="@string/bt4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</LinearLayout>